benchmarking/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-sim-route
  namespace: default
spec:
  parentRefs:
  - name: inference-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: llm-d-sim-large
      port: 8000
